--- a/CSS/footer-menu.css
+++ b/CSS/footer-menu.css
@@ -6,14 +6,18 @@
 }
 
 .page {
-    background-color: #e6f5f9;
+    /* background-color: #e6f5f9; */
+    background-color: #cae0f3;
 }
 
  :root {
+    /* --textColor: #f1bf2f; */
     --textColor: rgb(236, 238, 247);
-    --menuColor: #144496;
+    --menuColor: #04074c;
+    /* --menuColor: #144496; */
     --linkColor: #b5d4d2;
-    --footerColor: #44a1cf;
+    --footerColor: #04074c;
+    /* --footerColor: #44a1cf; */
     --mainColor: rgb(4, 20, 112);
     --space: 30px;
     --infColor: #f3fbfd;
@@ -49,7 +53,8 @@
 
 .btn {
     margin: 0 auto;
-    background-image: linear-gradient(0, #b25fc7, #f7c65d);
+    background-image: linear-gradient(0, #f29134, #f7c65d);
+    /* background-image: linear-gradient(0, #b25fc7, #f7c65d); */
     border-radius: 10px;
     text-align: center;
     font-weight: bold;
@@ -75,8 +80,10 @@
     text-align: center;
     height: 30px;
     width: 60px;
-    color: white;
-    background-color: violet;
+    color: #044d98;
+    /* color: white; */
+    /* background-color: violet; */
+    background-color: #0dd4fd;
     border-radius: 5px;
 }
 
